[gd_scene load_steps=6 format=3 uid="uid://b13blqarytcyc"]

[ext_resource type="Script" path="res://scripts/bubbles/bubble_blue.gd" id="1_5vvfr"]
[ext_resource type="Texture2D" uid="uid://2pnbvvkqib4l" path="res://assets/bubbles/Skip_BurbujaCeleste.png" id="2_7tl0j"]
[ext_resource type="AudioStream" uid="uid://bajkt3jpo44hq" path="res://sound/sfx/Fx_BubbleExplotion_3.wav" id="4_88vn2"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_h6ikj"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("4_88vn2")

[sub_resource type="CircleShape2D" id="CircleShape2D_5l6xw"]
radius = 46.5242

[node name="Bubble_Blue" type="StaticBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_5vvfr")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_h6ikj")
volume_db = -10.0
bus = &"SFX"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7tl0j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5l6xw")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="HitBox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5l6xw")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
